--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "admin-lte": "^3.0.5"
+        "@smartweb/vue-flash-message": "^0.6.10",
+        "admin-lte": "^3.0.5",
+        "bootstrap-vue": "^2.19.0",
+        "vue-router": "^3.4.9",
+        "vuex": "^3.5.1"
     }
 }
