--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     },
     "dependencies": {
         "@smartweb/vue-flash-message": "^0.6.10",
+        "@websanova/vue-auth": "^4.0.3",
         "admin-lte": "^3.0.5",
         "bootstrap-vue": "^2.19.0",
         "moment": "^2.29.1",
+        "vue-axios": "^3.2.0",
         "vue-router": "^3.4.9",
+        "vue-spinners": "^1.0.2",
         "vuex": "^3.5.1"
     }
 }
