--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@smartweb/vue-flash-message": "^0.6.10",
+        "@tinymce/tinymce-vue": "^3.2.6",
         "@websanova/vue-auth": "^4.0.3",
         "admin-lte": "^3.0.5",
         "bootstrap-vue": "^2.19.0",
